--- a/New/InstallVistAOnGTM.html
+++ b/New/InstallVistAOnGTM.html
@@ -15,30 +15,33 @@
 <nav id="TOC">
 <ul>
 <li><a href="#creating-an-empty-gt.myottadb-database-suitable-for-vista">Creating an Empty GT.M/YottaDB Database suitable for VistA</a></li>
+<li><a href="#loading-vista-into-the-gt.myottadb-database-we-just-created">Loading VistA Into the GT.M/YottaDB Database we just Created</a></li>
+<li><a href="#creating-an-startupshutdown-init-file-for-vista">Creating an Startup/Shutdown Init File for VistA</a></li>
 </ul>
 </nav>
 <p>Authors: Sam Habiel</p>
 <p>License:</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
+<p>Last Updated: January 2019</p>
 <p>A Mumps database (like VistA) is a series of routines and globals (a global in Mumps really means a file on disk). To load VistA into GT.M/YottaDB, you need to obtain the these from the CACHE.DAT distributed by the VA. Efforts are underway to lobby the VA to distribute the FOIA instance as a set of globals and routines; rather than in a proprietary format.</p>
-<p>Since the establishment of OSEHRA, each update monthly update of FOIA is exported as routines and globals in zwrite format at <a href="https://github.com/OSEHRA/VistA-M">Github</a>. In addition, DSS vxVistA can be obtained from <a href="https://github.com/OSEHRA/vxVistA-M">this repository</a> and WorldVistA can be obtained from <a href="https://github.com/glilly/wvehr2-dewdrop">this repository</a>.</p>
+<p>Since the establishment of OSEHRA, each update monthly update of FOIA is exported as routines and globals in zwrite format at <a href="https://github.com/OSEHRA/VistA-M">Github</a>. In addition, DSS vxVistA can be obtained from <a href="https://github.com/OSEHRA/vxVistA-M">this repository</a> and WorldVistA can be obtained from <a href="http://opensourcevista.net/NancysVistAServer/BetaWVEHR-3.0-Ver2-16Without-CPT-20181004/">here</a>.</p>
 <p>In our example, for setting up a VistA Database, we will use FOIA VistA.</p>
 <p>Before downloading VistA, we will start by creating an empty database.</p>
 <h1 id="creating-an-empty-gt.myottadb-database-suitable-for-vista">Creating an Empty GT.M/YottaDB Database suitable for VistA</h1>
 <p>Traditionally, production instances of VistA are hosted under their own username and group. You can create a new username and group and use that for running your VistA; or if you are just testing, use your own non-root username. DO NOT RUN AS ROOT. Places in which you need to run as root are indicated by the presence of <code>sudo</code>.</p>
 <p>Create a directory where you will place your environment. These two steps need to be done as a superuser. The directory name or location doesn't matter. In this case, it's <code>foia201608</code> under <code>/var/db</code>. Second step changes the ownership to your user name and your user group.</p>
-<div class="code"><code>$ <strong>sudo mkdir -p /var/db/foia201608</strong>
+<pre>$ <strong>sudo mkdir -p /var/db/foia201608</strong>
 $ <strong>sudo chown $USER:$USER /var/db/foia201608</strong>.
-$ <strong>cd /var/db/foia201608</strong></code></div>
+$ <strong>cd /var/db/foia201608</strong></pre>
 <p>Then create folders to hold your routines, globals, journals, and objects. The convention in the VistA community is to call these folders r g j and o. While it's easier to say routines globals journals and objects, I do not want to break with convention.</p>
-<div class="code"><code>$ <strong>mkdir r g j o</strong></code></div>
+<pre>$ <strong>mkdir r g j o</strong></pre>
 <p>Two parenthetical remarks:</p>
 <blockquote>
 <p>FIS (the company behind GT.M) recommends versioning objects and global directories to allow for rolling upgrades. I personally don't think this is necessary for VistA. More details can be found at the <a href="https://sourceforge.net/projects/fis-gtm/files/GT.M%20Acculturation%20Workshop/">GT.M Acculturation Workshop</a>.</p>
 <p>Various people in the VistA community create another directory called &quot;p&quot; for patches, so that you can apply updated routines in the &quot;r&quot; directory and not overwrite the original routine. The intent is reasonable, but what what almost always happens is that I get calls or emails on why changes aren't showing up. VistA tools (KIDS, Fileman, VPE) are all written just expecting a single routine list.</p>
 </blockquote>
 <p>At this point, we need to create an environment file that we will need to source in order to tell GT.M/YottaDB where are our routines and globals are. The reason we need to do this is simple: GT.M/YottaDB bases its operations almost entirely on environment variables from the shell. All values between || need to be replaced. Here's the file, which I called <a href="./env.vista">env.vista</a>.</p>
-<div class="code"><code> 
+<pre> 
 # This is just a variable so I don't have to type the same thing
 # over and over again.
 export vista_home="|your directory name|"
@@ -96,12 +99,12 @@ export gtm_sysid="|fill this in|"
 export gtm_zstep='n oldio s oldio=$i u 0 w $t(@$zpos),! b  u oldio'
 
 # For QEWD if installed (See http://qewdjs.com/)
-export GTMCI=""</code></div>
+export GTMCI=""</pre>
 <p>Once this is done, source the file using <code>$ . env.vista</code>. Then test that what you did works by running <code>$ mumps -dir</code>. You should see this:</p>
-<div class="code"><code>YOUR INSTANCE NAME></code></div>
+<pre>YOUR INSTANCE NAME></pre>
 <p>Type Control-D or &quot;HALT&quot; to get out.</p>
 <p>Now we need to create the database. You can create a default database by just running <code>mupip create</code>, but rather than do that, we need to write some code to tell GT.M/YottaDB to change its default database for VistA. I will create a file called <a href="./db.gde">g/db.gde</a>.</p>
-<div class="code"><code>! Change the default segment's file 
+<pre>! Change the default segment's file 
 ! to be g/mumps.dat
 ! to have 4096 byte blocks
 ! to have an initial DB size of 1048576*4096=4GB
@@ -143,11 +146,11 @@ add    -name    ZZ*     -region=TEMPGBL
 show -all
 
 ! save
-exit</code></div>
+exit</pre>
 <p>Once you save the file, run it.</p>
-<div class="code"><code>$ <strong>mumps -run ^GDE < g/db.gde |& tee g/db.gde.out</strong></code></div>
+<pre>$ <strong>mumps -run ^GDE < g/db.gde |& tee g/db.gde.out</strong></pre>
 <p>A successful invocation will show you this output on the screen and saved into g/db.gde.out as well.</p>
-<div class="code"><code>
+<pre>
 
 %GDE-I-GDUSEDEFS, Using defaults for Global Directory 
   /var/db/foia0616/g/mumps.gld
@@ -278,17 +281,17 @@ GDE>
 
 %GDE-I-GDCREATE, Creating Global Directory file 
 /var/db/foia0616/g/mumps.gld
-</code></div>
+</pre>
 <p>If you fail, you will see something similar to the following at the end of the output:</p>
-<div class="code"><code>%GDE-I-VERIFY, Verification FAILED
+<pre>%GDE-I-VERIFY, Verification FAILED
 
-%GDE-E-VERIFY, Verification FAILED</code></div>
+%GDE-E-VERIFY, Verification FAILED</pre>
 <p>At this point, we are ready to create our databases. This is easy.</p>
-<div class="code"><code>$ <strong>mupip create</strong>
+<pre>$ <strong>mupip create</strong>
 Created file /var/db/foia201608/g/mumps.dat
-Created file /var/db/foia201608/g/tempgbl.dat</code></div>
+Created file /var/db/foia201608/g/tempgbl.dat</pre>
 <p>To check that everything works fine, run <code>mumps -dir</code> and then <code>DO ^%GD</code> and <code>DO ^%RD</code>. The first will open all the database files for searching and open a shared memory segment on your machine. The second will make sure that your <code>$gtmroutines</code> variable is correct.</p>
-<div class="code"><code>$ <strong>mumps -dir</strong>
+<pre>$ <strong>mumps -dir</strong>
 
 FOIA 2016-08><strong>D ^%GD</strong>
 
@@ -307,25 +310,26 @@ Routine: <strong>*</strong>
 
 Total of 0 routines.
 
-Routine: <strong>&lt;enter&gt;</strong></code></div>
+Routine: <strong>&lt;enter&gt;</strong></pre>
 <p>It's common with all Unix software relying on POSIX/SysV Shared Memory to report errors with <code>shmget()</code>. If you see that when you are trying to run ^%GD, you need to increase your shared memory limits. I will leave you to google that on your own.</p>
-<p>Loading VistA Into the GT.M/YottaDB Database we just Created ----------------------------------------------------I said we will use FOIA VistA. Make sure that wget is installed on your machine, and then get the code (takes 3-30 minutes depending on your internet connection). First switch to a working directory (such as /tmp/) and run this:</p>
-<div class="code"><code>$ <strong>wget https://github.com/OSEHRA/VistA-M/archive/foia.zip</strong></code></div>
-<p>If you want WorldVistA or vxVistA instead, you can get them from <a href="https://github.com/glilly/wvehr2-dewdrop/archive/master.zip" class="uri">https://github.com/glilly/wvehr2-dewdrop/archive/master.zip</a> or <a href="https://github.com/OSEHRA/vxVistA-M/archive/master.zip" class="uri">https://github.com/OSEHRA/vxVistA-M/archive/master.zip</a> respectively.</p>
+<h1 id="loading-vista-into-the-gt.myottadb-database-we-just-created">Loading VistA Into the GT.M/YottaDB Database we just Created</h1>
+<p>I said we will use FOIA VistA. Make sure that wget is installed on your machine, and then get the code (takes 3-30 minutes depending on your internet connection). First switch to a working directory (such as /tmp/) and run this:</p>
+<pre>$ <strong>wget https://github.com/OSEHRA/VistA-M/archive/foia.zip</strong></pre>
+<p>If you want WorldVistA or vxVistA instead, you can get them from <a href="http://opensourcevista.net/NancysVistAServer/BetaWVEHR-3.0-Ver2-16Without-CPT-20181004/FileForDockerBuildWVEHR3.0WithoutCPT.zip" class="uri">http://opensourcevista.net/NancysVistAServer/BetaWVEHR-3.0-Ver2-16Without-CPT-20181004/FileForDockerBuildWVEHR3.0WithoutCPT.zip</a> or <a href="https://github.com/OSEHRA/vxVistA-M/archive/master.zip" class="uri">https://github.com/OSEHRA/vxVistA-M/archive/master.zip</a> respectively.</p>
 <p>Now unzip it:</p>
-<div class="code"><code>$ <strong>unzip foia.zip</strong></code></div>
+<pre>$ <strong>unzip foia.zip</strong></pre>
 <p>Everything gets unzipped in the folder VistA-M-foia/, so you need to use that folder as the first argument of the find commands below.</p>
 <p>Next we need to copy the routines to VistA (takes about 30 seconds). There are quotes around the <code>{}</code> because the paths contain spaces.</p>
-<div class="code"><code>$ <strong>find VistA-M-foia/ -name '*.m' -exec cp "{}" r/ \;</strong></code></div>
+<pre>$ <strong>find VistA-M-foia/ -name '*.m' -exec cp "{}" r/ \;</strong></pre>
 <p>Next we need to load the globals. We use the versatile <code>mupip load</code> command for that. Note that mupip load wants quotes sent down from the shell for any paths that contain spaces; and these do. Again, we tee our output because there is so much of it and because we need to visually inspect that everything got loaded. This takes time; from 10 minutes up to 30 minutes.</p>
-<div class="code"><code>$ <strong>find VistA-M-foia -name '*.zwr' -exec echo {} \; -exec mupip load \"{}\" \; |& tee g/foia201608-load.log</strong></code></div>
+<pre>$ <strong>find VistA-M-foia -name '*.zwr' -exec echo {} \; -exec mupip load \"{}\" \; |& tee g/foia201608-load.log</strong></pre>
 <p>Verify that none of the globals failed to import.</p>
-<div class="code"><code>$ <strong>fgrep '%GTM' g/foia201608-load.log | wc -l</strong></code></div>
+<pre>$ <strong>fgrep -- '-E-' g/foia201608-load.log | wc -l</strong></pre>
 <p>If you get an output that isn't zero, you need to visually inspect what happened.</p>
 <p>NB: If you have a machine with multiple cores, you can speed up the loading with something like this (replace number after P variable with number of cores, here 4)</p>
-<div class="code"><code>$ <strong>find VistA-M-foia -name '*.zwr' -print0 | xargs -0 -I{} -n 1 -P 4 mupip load \"{}\" |& tee g/foia201608-load.log</strong></code></div>
+<pre>$ <strong>find VistA-M-foia -name '*.zwr' -print0 | xargs -0 -I{} -n 1 -P 4 mupip load \"{}\" |& tee g/foia201608-load.log</strong></pre>
 <p>After we are done with this, we will repeat our smoke test with %GD and %RD.</p>
-<div class="code"><code>$ <strong>mumps -dir</strong>
+<pre>$ <strong>mumps -dir</strong>
 
 FOIA 2016-08><strong>D ^%GD</strong>
 
@@ -342,9 +346,9 @@ FOIA 2016-08><strong>D ^%RD</strong>
 Routine directory
 Routine: <strong>*</strong>
 ...
-Total of 35547 routines.</code></div>
+Total of 35547 routines.</pre>
 <p>At this point we are done loading VistA. It's time to enable journaling on all the regions we want. Following script recovers the database if it was journaled and then enables journaling. File here: <a href="./vista.journaling">vista.journaling</a></p>
-<div class="code"><code># This is journaling.
+<pre># This is journaling.
 if [ -f ${vista_home}/j/mumps.mjl ]; then
   if (( $(lsof -t ${vista_home}/g/mumps.dat | wc -l) == 0 )); then
     $gtm_dist/mupip journal -recover -backward ${vista_home}/j/mumps.mjl
@@ -358,11 +362,12 @@ fi
 
 if (( $(lsof -t ${vista_home}/g/mumps.dat | wc -l) == 0 )); then
   $gtm_dist/mupip set -journal="enable,on,before,f=${vista_home}/j/mumps.mjl" -region DEFAULT
-fi</code></div>
+fi</pre>
 <p>Source this file to enable journaling.</p>
-<p>If you would rather create an init script, here's an example to copy. This provides much more functionality than journaling--it's the kind of thing you would have on a production instance.</p>
+<h1 id="creating-an-startupshutdown-init-file-for-vista">Creating an Startup/Shutdown Init File for VistA</h1>
+<p>You can create an init script instead of manually running the journaling script to recover. This will run upon startup and shutdown, to make sure your VistA instance is ready. Here's an example to copy. This provides much more functionality than journaling--it's the kind of thing you would have on a production instance.</p>
 <p>NB: You need to put a valid value for vista_instance and the user also needs to be valid (here vistauser). File here: <a href="./vista.initd">vista.initd</a></p>
-<div class="code"><code>#!/usr/bin/env bash
+<pre>#!/usr/bin/env bash
   #---------------------------------------------------------------------------
   # Copyright 2011-2017 The Open Source Electronic Health Record Agent
   #
@@ -464,18 +469,18 @@ fi</code></div>
       *)
           echo "Usage: $0 {start|stop|restart}"
           ;;
-  esac</code></div>
+  esac</pre>
 <p>You have to save this script in /etc/init.d/, and make it execuatble and owned by root, and add it the correct run levels for the Linux kernel. On Ubuntu, this would look like this. You need to be root (or sudo) to perform these steps:</p>
-<div class="code"><code>$ <strong>cd /etc/init.d/</strong>
+<pre>$ <strong>cd /etc/init.d/</strong>
 $ <strong>edit vista.initd</strong> # create the file here. Skip if done.
 $ <strong>chown root:root vista.initd</strong>
 $ <strong>chmod +x vista.initd</strong>
 $ <strong>update-rc.d vista.initd defaults</strong>
-$ <strong>update-rc.d vista.initd enable</strong></code></div>
+$ <strong>update-rc.d vista.initd enable</strong></pre>
 <p>The next step is not necessary if you don't plan to have users log-in. You should pre-compile the routines on GT.M/YottaDB so they do not have to be compiled at runtime. You can speed this up with xargs if you have multiple cores (left as an exercise to the reader).</p>
-<div class="code"><code>$ cd o
+<pre>$ cd o
 $ for r in ../r/*.m; do mumps $r; done 2>&1 | tee ../compile_all.log
-</code></div>
+</pre>
 <p>At this point, you are ready to continue to <a href="./InitializeVistA.html">Initialize Vista</a>.</p>
 </body>
 </html>
