--- a/PROJECTSmain.html
+++ b/PROJECTSmain.html
@@ -67,7 +67,7 @@ content="text/html; charset=iso-8859-1">
             <p>This documentation project presents chapters in a list of steps for 
             installing VistA's <a href="../apps/APPSmain.html#Installation">Platinum</a>* 
             account on Graystone Technology Mumps (GT.M)/YottaDB or Intersystems Cach&eacute; MUMPS server, to the point of the functioning Broker.</p>
-            <p align="left">These instructions were updated in 2016 and 2018.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions (2004-2006) have been left here for reference.</p>
+            <p align="left">These instructions were updated in 2016, 2018 and 2021.  <a href="https://www.osehra.org">OSEHRA</a> has funded a part of the update. The old instructions (2004-2006) have been left here for reference.</p>
             <h3>New Instructions (2016-2018)</h3>
             <p>If you will use Cach&eacute;, follow step 1 and then step 4 and following. If you have GT.M/YottaDB follow steps 2 and following.</p>
             <p>New instructions written and edited by Sam Habiel. Other authors whose work was copied and edited
