--- a/New/InstallVistAOnGTM.html
+++ b/New/InstallVistAOnGTM.html
@@ -25,7 +25,7 @@
 <p>Authors: Sam Habiel, Kevin Toppenberg, Matthew Toppenberg</p>
 <p>License:</p>
 <p><a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="image" /></a></p>
-<p>Last Updated: May 2021</p>
+<p>Last Updated: August 2021</p>
 <p>A Mumps database (like VistA) is a series of routines and globals (a global in Mumps really means a file on disk). To load VistA into GT.M/YottaDB, you need to obtain the these from the CACHE.DAT distributed by the VA. Efforts are underway to lobby the VA to distribute the FOIA instance as a set of globals and routines; rather than in a proprietary format.</p>
 <p>Since the establishment of OSEHRA, each monthly update of FOIA is exported as routines and globals in zwrite format at <a href="https://github.com/OSEHRA/VistA-M">GitHub</a>. In addition, DSS vxVistA can be obtained from <a href="https://github.com/OSEHRA/vxVistA-M">this repository</a> and WorldVistA can be obtained from <a href="http://opensourcevista.net/NancysVistAServer/BetaWVEHR-3.0-Ver2-16Without-CPT-20181004/">here</a>.</p>
 <p>In our example, for setting up a VistA Database, we will use FOIA VistA.</p>
@@ -428,9 +428,9 @@ echo "Starting TaskMan"
 $gtm_path/mumps -run ZTMB
 
 #remove old journal files
-if (( $(find ${vista_home}/g -name '*_*' -mtime +3 -print | wc -l) > 0 )); then
+if (( $(find ${vista_home}/j -name '*_*' -mtime +3 -print | wc -l) > 0 )); then
   echo "Deleting old journals..."
-  find ${vista_home}/g -name '*_*' -mtime +3 -print -delete
+  find ${vista_home}/j -name '*_*' -mtime +3 -print -delete
 fi
 
 echo "$(date) Server start."</pre>
